@@ -22,6 +22,7 @@ import org.elasticsearch.xpack.ql.type.DataType;
 import org.elasticsearch.xpack.ql.type.DataTypes;
 import org.hamcrest.Matcher;
 
+import java.util.Arrays;
 import java.util.List;
 import java.util.Locale;
 
@@ -30,6 +31,7 @@ import static org.elasticsearch.xpack.esql.type.EsqlDataTypes.isRepresentable;
 import static org.elasticsearch.xpack.ql.type.DataTypeConverter.commonType;
 import static org.elasticsearch.xpack.ql.type.DataTypes.isNull;
 import static org.hamcrest.Matchers.equalTo;
+import static org.hamcrest.Matchers.is;
 import static org.hamcrest.Matchers.not;
 import static org.hamcrest.Matchers.nullValue;
 
@@ -70,9 +72,6 @@ public abstract class AbstractBinaryOperatorTestCase extends AbstractFunctionTes
      * @return True if the type combination is supported by the respective function.
      */
     protected boolean supportsTypes(DataType lhsType, DataType rhsType) {
-        if (isNull(lhsType) || isNull(rhsType)) {
-            return false;
-        }
         if ((lhsType == DataTypes.UNSIGNED_LONG || rhsType == DataTypes.UNSIGNED_LONG) && lhsType != rhsType) {
             // UL can only be operated on together with another UL, so skip non-UL&UL combinations
             return false;
@@ -94,14 +93,16 @@ public abstract class AbstractBinaryOperatorTestCase extends AbstractFunctionTes
                 Source src = new Source(Location.EMPTY, lhsType.typeName() + " " + rhsType.typeName());
                 if (isRepresentable(lhsType) && isRepresentable(rhsType)) {
                     op = build(src, field("lhs", lhsType), field("rhs", rhsType));
-                    try (Block block = evaluator(op).get(driverContext()).eval(row(List.of(lhs.value(), rhs.value())))) {
+                    try (Block block = evaluator(op).get(driverContext()).eval(row(Arrays.asList(lhs.value(), rhs.value())))) {
                         result = toJavaObject(block, 0);
                     }
                 } else {
                     op = build(src, lhs, rhs);
                     result = op.fold();
                 }
-                if (result == null) {
+                if (isNull(lhsType) || isNull(rhsType)) {
+                    assertThat(op.toString(), result, is(nullValue()));
+                } else if (result == null) {
                     assertCriticalWarnings(
                         "Line -1:-1: evaluation of [" + op + "] failed, treating result as null. Only first 20 failures recorded.",
                         "Line -1:-1: java.lang.ArithmeticException: " + commonType(lhsType, rhsType).typeName() + " overflow"
